tree-sitter-simplex/test/corpus/declarations.txt
================================================================================
Simple global declaration with block
================================================================================

@title
    Symbols

--------------------------------------------------------------------------------

(document
  (property
    name: (property_name)
    value: (block)))

================================================================================
Declaration with inline arguments
================================================================================

@pagestyle fancy

--------------------------------------------------------------------------------

(document
  (property
    name: (property_name)
    args: (inline_args)))

================================================================================
Margins declaration with several arguments
================================================================================

@margins 3cm 4.5cm 3cm 4.5cm

--------------------------------------------------------------------------------

(document
  (property
    name: (property_name)
    args: (inline_args)))
