tree-sitter-simplex/test/corpus/structure.txt
================================================================================
Section heading with paragraph
================================================================================

=   First section

    lipsum text here

--------------------------------------------------------------------------------

(document
  (heading
    marker: (heading_marker)
    title: (inline_text (text)))
  (paragraph
    (block)))

================================================================================
Chapter and part markers
================================================================================

!!  A chapter

!!! A part

--------------------------------------------------------------------------------

(document
  (heading
    marker: (heading_marker)
    title: (inline_text (text)))
  (heading
    marker: (heading_marker)
    title: (inline_text (text))))

================================================================================
Define paragraph with term and text
================================================================================

:=  Sample: This is a sample paragraph.

--------------------------------------------------------------------------------

(document
  (define
    term: (term)
    text: (inline_text (text))))

================================================================================
Arrow paragraph
================================================================================

=>  Note something here

--------------------------------------------------------------------------------

(document
  (paragraph_arrow
    marker: (arrow_marker)
    text: (inline_text (text))))
