tree-sitter-simplex/test/corpus/tables.txt
================================================================================
Simple table with rows
================================================================================

>@  l|c||r
>   1
>   2
>+
>   4

--------------------------------------------------------------------------------

(document
  (table
    (table_def
      marker: (table_marker)
      format: (inline_text (inline (text))))
    (table_cell content: (block_or_line inline: (inline_text (inline (text)))))
    (table_cell content: (block_or_line inline: (inline_text (inline (text)))))
    (table_rule marker: (table_rule_marker))
    (table_cell content: (block_or_line inline: (inline_text (inline (text)))))))

================================================================================
Table with typed and colored cells
================================================================================

>$  $x^2$
>!  Heading
>red  A

--------------------------------------------------------------------------------

(document
  (table
    (table_cell
      spec: (cell_spec)
      content: (block_or_line inline: (inline_text (inline (math (math_content))))))
    (table_cell
      spec: (cell_spec)
      content: (block_or_line inline: (inline_text (inline (text)))))
    (table_cell
      spec: (cell_spec)
      content: (block_or_line inline: (inline_text (inline (text)))))))
